src/snapshots/afrotd__parser__tests__rule_html_2.9.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            2.9.2 Forward Progress
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Forward Progress ist der Begriff, mit dem das Ende der Bewegung
                (Advancen) des Ballträgers oder eines in der Luft befindlichen
                Pass-Receivers eines Teams bezeichnet wird und bezieht sich auf
                die Position des Balles, wenn dieser der Regel nach dead wird
                (Regeln 4.1.3.a, 4.1.3.b, 4.1.3.p, 4.2.1, 4.2.4 und 5.1.3.a
                Ausnahme) (A.R. 5.1.3.I bis 5.1.3.VI und A.R. 8.2.1.I bis
                8.2.1.IX) (Ausnahme: Regel 8.5.1.a, A.R. 8.5.1.I).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.2.9.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
