src/snapshots/afrotd__parser__tests__rule_html_3.1.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.1.1 Pregame, erste und dritte Spielperiode
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Aufwärmen vor dem Spiel: bei regulären Saisonspielen muss
                das Heimteam dem Gastteam die Möglichkeit geben, sich
                wenigstens 30 Minuten vor dem geplanten Kickoff auf dem
                Spielfeld aufwärmen zu können.
                </li>
                <li>Wenn ein Teammitglied den Platz betritt, bevor die
                Schiedsrichter die Team-Captains zum Coin Toss begleiten, muss
                der Head Coach oder ein Assistenz-Coach dieses Teams auf dem
                Feld anwesend sein.
                </li>
                <li>Wenn Teammitglieder auf dem Platz anwesend sind, nachdem
                die Schiedsrichter zuständig sind (Regel 11.1.1), müssen sie
                ihre Trikots oder ihre Nummern deutlich tragen. Jedes
                Teammitglied ohne erkennbare Nummern muss die Spielfläche
                verlassen (A.R. 3.1.1.I).
                </li>
                <li>Jede Halbzeit beginnt mit einem Kickoff.
                </li>
                <li>Drei Minuten vor dem festgesetzten Spielbeginn muss der
                Referee in der Spielfeldmitte, in Anwesenheit der anderen
                Schiedsrichter und nicht mehr als vier Team Captains jedes
                Teams, eine Münze werfen (Coin Toss), wobei er vor dem Wurf der
                Münze zuerst den Team Captain des Gastteams anweist, seine Wahl
                zu treffen. Vor der zweiten Halbzeit erhält der Referee die
                Optionen der Teams für die zweite Halbzeit.
                </li>
                <li>Während des Coin Toss muss sich jedes Team in der Zone
                zwischen seiner Seitenlinie und den Neunmetermarkierungen oder
                in der Teamzone aufhalten. Der Coin Toss beginnt, wenn die Team
                Captains die Neunmetermarkierungen überqueren und endet, wenn
                die Team Captains zu den Neunmetermarkierungen zurückkehren.
                Strafe (f): 5 Meter vom Succeeding Spot [S19].
                </li>
                <li>Der Gewinner des Coin Toss muss eine der folgenden
                Möglichkeiten auswählen:
                    <ol type="1">
                        <li>das Team bestimmen, das den Kickoff ausführen soll;
                        </li>
                        <li>die Endzone bestimmen, die sein Team verteidigen
                        soll;
                        </li>
                        <li>seine Wahl auf die zweite Halbzeit verschieben.
                        </li>
                    </ol>
                </li>
                <li>Der Verlierer des Coin Toss muss, je nach Verfügbarkeit,
                die obigen Möglichkeiten zu 1 oder 2 wählen.
                </li>
                <li>Wählt der Gewinner des Münzwurfes die Möglichkeit 3, wählt
                er anschließend, nach der Wahl des Gegners, die verfügbare
                Option (Möglichkeit 1 oder 2).
                </li>
                <li>Für die zweite Halbzeit soll der Verlierer des Münzwurfs
                oder der Gewinner, wenn er die Möglichkeit 3 gewählt hat, die
                o. a. Möglichkeiten 1 oder 2 auswählen. Der Gegner wählt dann
                die verbleibenden Möglichkeiten.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.1.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
