src/snapshots/afrotd__parser__tests__rule_html_3.1.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.1.2 Zweite und vierte Spielperiode
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Während der ersten und der zweiten sowie während der dritten
                und der vierten Spielperiode müssen die Teams die
                gegenüberliegenden Endzonen verteidigen.
            </p>
            <ol type="a">
                <li>Der Ball muss exakt an den Punkt verlegt werden, der in
                Relation zu den Goallines und den Seitenlinien, mit seiner Lage
                am Ende der vorherigen Periode übereinstimmt.
                </li>
                <li>Ballbesitz, Nummer des Downs und die Distanz zum nächsten
                First Down bleiben bestehen.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.1.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
