src/snapshots/afrotd__parser__tests__rule_html_3.2.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.2.1 Länge der Perioden und der Pausen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Die reine Spielzeit in einem Spiel beträgt 48 Minuten, geteilt
                in vier Perioden zu je 12 Minuten (Ausnahme: Jugendspiele siehe
                BSO, 2. Damenbundesliga siehe ligeninterne Regelung). Zwischen
                der ersten und zweiten Periode (erste Halbzeit) und der dritten
                und vierten Periode (zweite Halbzeit) soll eine Pause von einer
                Minute liegen. (Ausnahme: Diese 1-Minuten-Pausen können für
                Radio- und TV-Timeouts verlängert werden.)
            </p>
            <ol type="a">
                <li>Keine Periode darf beendet werden, bevor der Ball dead ist
                und der Referee die Periode für beendet erklärt hat [S14].
                </li>
                <li>Die Pause zwischen den Halbzeiten eines regulären
                Saisonspieles soll 15 Minuten dauern. Die Pause kann in
                gemeinsamen Einverständnis der Managements beider Teams
                verkürzt werden. Unmittelbar nach dem Ende der zweiten
                Spielperiode soll der Referee anzeigen, dass die Halbzeitpause
                beginnt [S2].
                </li>
                <li>Am Ende der ersten Halbzeit, nachdem die Teams das Feld
                verlassen haben und der Referee (a) den letzten Down mit der
                SchiedsrichterCrew abgestimmt und (b) festgestellt hat, dass es
                keine Einwände eines Head Coaches gibt, kann er die Halbzeit
                für beendet erklären. Nachdem der Referee die erste Halbzeit
                für beendet erklärt hat, werden keine zusätzlichen Einwände von
                dem vorherigen Down zugelassen.
                </li>
                <li>Das Heimteammanagement bestimmt den Zeitpunkt der
                Halbzeitaktivitäten. Das Spielfeld steht den Spielteilnehmern
                spätestens drei Minuten vor Anpfiff der zweiten Halbzeit zur
                Verfügung. Wenn ein Spielteilnehmer während der Halbzeitpause
                den Platz betritt, muss ein Verantwortlicher dieser Mannschaft
                auf dem Platz ebenfalls anwesend sein. Wenn Kicker oder andere
                Spielteilnehmer den Platz betreten, bevor das Spielfeld
                verfügbar ist, müssen ihre Aktivitäten auf die eigene Teamzone
                beschränkt werden. Alle Spielteilnehmer müssen die geplanten
                Halbzeitaktivitäten respektieren und alle Kicks müssen in die
                Kick-Netze erfolgen, bis das Spielfeld wieder verfügbar ist.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.2.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
