src/snapshots/afrotd__parser__tests__rule_html_3.2.2.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.2.2 Veränderung der Spielzeit
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Vor dem Spiel kann der Referee die Spielzeit und die
                Halbzeit-Pause verkürzen, wenn er der Meinung ist, dass das
                Spiel durch Dunkelheit oder andere Umstände behindert werden
                könnte. Wenn die Spielzeit vor Spielbeginn verkürzt wird,
                müssen die vier Spielperioden die gleiche Länge haben.
            </p>
            <ol type="a">
                <li>Während des Spieles kann die verbleibende Spielzeit jeder
                verbleibenden Periode oder Perioden in gemeinsamen
                Einverständnis der gegnerischen Head Coaches und dem Referee
                verkürzt werden (A.R. 3.2.2.I).
                </li>
                <li>Fehler bei der Zeitnahme der Game Clock können korrigiert
                werden. Sie müssen in der Periode korrigiert werden, in der sie
                sich ereignet haben.
                </li>
                <li>Wenn der Referee genau weiß, wie viel Spielzeit vergangen
                ist, muss er die Game Clock auf die entsprechende Zeit
                zurücksetzen und danach die Game Clock entsprechend starten.
                </li>
                <li>Fehler bei der Zeitnahme der Play Clock können durch den
                Referee korrigiert werden. Der Countdown der Play Clock muss
                dann neu gestartet werden. (Regel 2.29.2)
                </li>
                <li>Wird der Countdown der Play Clock durch Umstände
                unterbrochen, die außerhalb der Kontrolle eines Teams liegen
                und die verstrichene Zeit der Play Clock ist nicht bestimmbar,
                muss der Countdown neu gestartet werden und die Game Clock
                startet gemäß Regel 3.2.4.b.
                </li>
                <li>Die 40/25-Sekunden Play Clock soll gestartet werden, auch
                wenn die Game Clock läuft und weniger als 40, beziehungsweise
                25 Sekunden in einer Spielperiode anzeigt.
                </li>
                <li>Die Game Clock darf nicht angehalten werden, wenn die Play
                Clock in Konflikt zu Regel 3.2.2.f gestartet wurde.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.2.2"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
