src/snapshots/afrotd__parser__tests__rule_html_3.2.3.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.2.3 Verlängerung der Perioden
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Eine Periode muss um einen Down ohne Zeit verlängert
                werden, wenn während eines Downs in der zweiten oder vierten
                Spielperiode, in dem die Spielzeit ausläuft, sich eine oder
                mehrere der nachfolgenden Umstände ereignen (A.R. 3.2.3.I bis
                3.2.3.VIII):
                    <ol type="1">
                        <li>Eine Strafe für ein oder mehrere Live Ball Fouls
                        wird angenommen (Ausnahme: Regel 10.2.5.a und Regel
                        10.2.5.d, wenn die Punkte für das Fieldgoal akzeptiert
                        werden). Je nach Wahl des gefoulten Teams wird die
                        Periode nicht verlängert, wenn das Foul durch das
                        ballbesitzende Team verursacht wird und die
                        Strafandrohung einen Downverlust enthält (A.R.
                        3.2.3.VIII).
                        </li>
                        <li>Es ereignen sich Fouls, die sich aufheben.
                        </li>
                        <li>Ein Schiedsrichter pfeift versehentlich ab oder
                        erklärt durch ein irrtümliches Signal den Ball dead.
                        </li>
                    </ol>
                </li>
                <li>Es müssen zusätzliche Downs ohne Zeit gespielt werden, bis
                ein Down ohne die in Regel 3.2.3.a.1 bis 3.2.3.a.3 aufgeführten
                Umstände gespielt wurde.
                </li>
                <li>Ereignet sich ein Touchdown während eines Downs, in dem die
                Spielzeit ausläuft, wird die Periode für den Try verlängert.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.2.3"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
