src/snapshots/afrotd__parser__tests__rule_html_3.2.4.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.2.4 Zeitnahme-Vorrichtungen
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Game Clock Die Spielzeit muss mit einer Uhr gemessen
                werden, die eine Stoppuhr sein kann und vom zuständigen
                Schiedsrichter bedient wird, es sei denn, es ist eine sichtbare
                Game Clock vorhanden, die von einem Assistenten unter Aufsicht
                des zuständigen Schiedsrichters bedient wird. Die Art der Game
                Clock und der Aufenthaltsort des Game Clock Bedieners wird
                durch das Heimteammanagement bestimmt. Der Game Clock Bediener
                kann sich an der Seitenlinie oder in einer üblichen Press Box
                befinden. Wenn sich der Game Clock Bediener in einer Press Box
                befindet, wird vorgeschrieben, dass sich diese Örtlichkeit
                zwischen den Goallines befinden muss. Dieser Standort muss vor
                öffentlichen Störungen geschützt sein und eine direkte und
                ungehinderte Sicht auf das Spielfeld ermöglichen. Die Game
                Clock soll keine Sekundenbruchteile anzeigen.
                </li>
                <li>40-Sekunden Play Clock
                    <ol type="1">
                        <li>Wenn ein Schiedsrichter anzeigt, dass der Ball dead
                        ist [S1], startet die Play Clock den
                        40-Sekunden-Countdown.
                        </li>
                        <li>Wenn der 40-Sekunden-Countdown nicht startet oder
                        durch Umstände unterbrochen wird, die außerhalb der
                        Kontrolle der Schiedsrichter oder des Bedieners der
                        Play Clock liegen (z. B.: Fehlfunktionen), muss der
                        Referee die Game Clock anhalten und anzeigen
                        (Pumpbewegung mit beiden geöffneten Handflächen über
                        dem Kopf), dass die Play Clock auf 40 Sekunden
                        zurückgestellt und sofort neu gestartet wird.
                        </li>
                        <li>In dem Fall, dass der 40-Sekunden-Countdown läuft
                        und der Ball bei verbleibenden 25 Sekunden nicht
                        spielbereit ist, muss der Referee ein Timeout anzeigen
                        und die Play Clock wird auf 25 Sekunden gesetzt. Wird
                        danach das Spiel aufgenommen, gibt der Referee den Ball
                        frei [S1] und die Play Clock beginnt den
                        25-Sekunden-Countdown. Die Game Clock startet mit dem
                        Snap, es sei denn, sie lief, als der Referee das
                        Timeout anzeigte; in diesem Fall startet die Game Clock
                        mit der Ballfreigabe des Referees (Regel 3.3.2.f)(A.R.
                        3.2.4.I und 3.2.4.II).
                        </li>
                    </ol>
                </li>
                <li>25-Sekunden Play Clock Wenn ein Schiedsrichter anzeigt,
                dass die Game Clock aus den nachfolgenden Gründen angehalten
                wurde, zeigt der Referee (Pumpbewegung mit einer geöffneten
                Handfläche über dem Kopf) an, dass die Play Clock auf 25
                Sekunden gesetzt werden soll:
                    <ol type="1">
                        <li>Strafdurchführung
                        </li>
                        <li>Team-Timeout
                        </li>
                        <li>Zwei-Minuten-Timeout
                        </li>
                        <li>Medien-Timeout
                        </li>
                        <li>Verletzungs-Timeout nur für einen Team A-Spieler.
                        Die Play Clock wird für ein Verletzungs-Timeout eines
                        Team B-Spielers auf 40 Sekunden gesetzt, außer nach
                        einem Team-Timeout oder wenn die Game Clock für das
                        Zwei-Minuten-Timeout angehalten wurde.
                        </li>
                        <li>Nachmessen
                        </li>
                        <li>Team B wird ein First Down zuerkannt, außer nach
                        einem Free Kick.
                        </li>
                        <li>nach einem Kick-Down außer einem Free Kick
                        </li>
                        <li>Punkte außer einem Touchdown (nicht beim Try)
                        </li>
                        <li>Beginn jeder Periode
                        </li>
                        <li>Start einer Team Serie in Extraperioden
                        </li>
                        <li>andere administrative Gründe.
                        </li>
                        <li>Ein Offense Spieler verliert durch die Teilnahme am
                        Down seinen Helm vollständig. Die Play Clock wird auf
                        40 Sekunden gesetzt, wenn ein Defense Spieler seinen
                        Helm durch die Teilnahme am Down vollständig verliert,
                        außer nach einem Team-Timeout oder wenn die Game Clock
                        für das Zwei-Minuten-Timeout angehalten wurde.
                        </li>
                    </ol>
                </li>
                <li>Ausfall einer Play Clock Fällt eine der beiden sichtbaren
                Play Clocks aus, muss der Referee sofort beide Head Coaches
                davon unterrichten und beide Uhren abschalten lassen.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.2.4"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
