src/snapshots/afrotd__parser__tests__rule_html_3.2.5.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.2.5 Mindestspielzeit für einen Down
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <p>
                Wird die Game Clock mit drei oder mehr Sekunden verbleibender
                Spielzeit in einer Spielperiode angehalten und startet danach
                wieder mit der Ballfreigabe durch den Referee, kann die Offense
                den Ball nach dem Snap direkt zu Boden werfen (Regel 7.3.2.f) ,
                um die Game Clock legal anzuhalten und hat voraussichtlich noch
                genug Zeit für einen weiteren Down. Bei zwei oder einer Sekunde
                verbleibender Spielzeit in einer Spielperiode auf der Game
                Clock ist nur noch genug Zeit für einen Down (A.R. 3.2.5.I).
            </p>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.2.5"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
