src/snapshots/afrotd__parser__tests__rule_html_3.3.1.snap
---
source: src/parser.rs
expression: rule_html
snapshot_kind: text
---
<article class="message is-size-4">
    <div class="message-header">
        <p>
            3.3.1 Timeout
        </p>
    </div>
    <div class="message-body">
        <div class="content">
            <ol type="a">
                <li>Ein Schiedsrichter muss ein Timeout signalisieren, wenn die
                Regeln das Anhalten der Game Clock vorsehen oder wenn einem
                Team oder dem Referee ein Timeout angerechnet wird. Andere
                Schiedsrichter sollen die Timeout Signale wiederholen. Der
                Referee kann willkürlich ein Timeout nehmen, das ihm
                angerechnet wird, wenn er aus irgendeinem Grund, der in den
                Regeln nicht erfasst ist, das Spiel unterbricht (A.R.
                3.3.1.IV).
                </li>
                <li>Sollte ein Team alle seine Timeouts verbraucht haben oder
                keine Timeouts mehr verfügbar sein und ein Timeout verlangen,
                dürfen die Schiedsrichter diesem Verlangen nicht stattgeben
                (Regel 3.3.4).
                </li>
                <li>Sobald das Spiel beginnt, dürfen Spieler, ausgenommen
                während der Halbzeitpause, weder im Spielfeld noch in den
                Endzonen mit einem Ball üben.
                </li>
            </ol>
        </div>
        <div class="block">
            <a class="button is-medium" href=
            "https://afsvd.de/content/files/2025/12/Football_Regelbuch_2026-1.pdf#subsection.1.3.3.1"
            target="_blank" rel="noreferrer noopener">Offizielles Regelwerk</a>
        </div>
        <div class="block"></div>
    </div>
</article>
